--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,9 @@
 {
   "name": "backend",
+  "engine": {
+    "node": "18.14.0",
+    "npm": "9.7.1"
+  },
   "type": "module",
   "version": "1.0.0",
   "description": "",
