--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,9 @@
 {
   "name": "frontend",
+  "engine": {
+    "node": "18.14.0",
+    "npm": "9.7.1"
+  },
   "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
