--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,7 @@
 {
   "name": "frontend",
   "engines": {
-    "node": "18.14.0",
-    "npm": "9.7.1"
+    "node": "18.14.0"
   },
   "proxy": "http://localhost:5000",
   "version": "0.1.0",
